modify add api google

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="ayp.aug.photogallery.RECEIVE_SHOW_NOTIFICATION" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -54,6 +58,17 @@
                 <action android:name="ayp.aug.photogallery.ACTION_SHOW_NOTIFICATION" />
             </intent-filter>
         </receiver>
+
+        <activity android:name=".PhotoPageActivity"
+            android:label="@string/in_app_browser"
+            android:parentActivityName=".PhotoPageActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+
+        <!--Setting-->
+        <activity android:name=".SettingActivity"
+            android:label="@string/photo_setting"
+            android:parentActivityName=".PhotoGalleryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
     </application>
 
 </manifest>
