--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:preference-v7:23.4.0'
+
+    // Location
     compile 'com.google.android.gms:play-services-location:9.4.0'
+    // Map
+    compile 'com.google.android.gms:play-services-maps:9.4.0'
 
 }
